--- a/css/styles.css
+++ b/css/styles.css
@@ -491,32 +491,48 @@ input {
   color: #ffffff;
 }
 
+/* .footer-form-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+} */
+
 .footer-form {
   display: flex;
+  flex-direction: column;
+  /* gap: 24px; */
   margin-left: 80px;
 }
 
-.form-label {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
+.subscribe-text {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
+  margin-left: 80px;
+  margin-bottom: 16px;
 }
+
+/* .form-label {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+} */
 
 .footer-input {
   width: 264px;
   height: 40px;
-  background-color: #2e2f42;
+  background-color: transparent;
   border-radius: 4px;
   border: 1px solid #ffffff;
   padding-left: 16px;
   font-size: 12px;
-  line-height: 2;
+  line-height: 1.5;
   letter-spacing: 0.04em;
+  padding-left: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   color: #ffffff;
   outline: transparent;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -536,16 +552,17 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 16px;
-  align-self: flex-end;
+  align-self: center;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  cursor: pointer;
   border: none;
   border-radius: 4px;
   background-color: #4d5ae5;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   margin-left: 24px;
   padding: 8px 24px;
@@ -555,6 +572,10 @@ input {
 .subscribe-btn:hover,
 .subscribe-btn:focus {
   background-color: #404bbf;
+}
+
+.subscribe-btn-icon {
+  margin-left: 16px;
 }
 /* --------------- FOOTER STYLES /--------------- */
 
