--- a/css/styles.css
+++ b/css/styles.css
@@ -501,7 +501,7 @@ input {
 .footer-form {
   display: flex;
   flex-direction: column;
-  /* gap: 24px; */
+  gap: 24px;
   margin-left: 80px;
 }
 
