--- a/css/styles.css
+++ b/css/styles.css
@@ -234,9 +234,6 @@ input {
 }
 
 .hero-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   font-family: inherit;
   font-size: 16px;
   font-weight: 500;
@@ -765,7 +762,33 @@ input {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .modal-form-checkbox-field:focus + .modal-form-label .modal-own-checkbox {
-  outline: 2px solid rgba(0, 0, 255, 0.7);
-} */
+.modal-submit-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  display: block;
+  height: 56px;
+  min-width: 169px;
+  border: none;
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px 32px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-submit-btn:hover,
+.modal-submit-btn:focus {
+  background-color: #404bbf;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
 /* --------------- MODAL STYLES /--------------- */
