--- a/css/styles.css
+++ b/css/styles.css
@@ -754,7 +754,7 @@ input {
   .modal-own-checkbox {
   background-color: #404bbf;
   fill: #f4f4fd;
-  border: transparent;
+  border: #404bbf;
 }
 
 .modal-form-checkbox-field + .modal-form-checkbox-label .modal-own-checkbox {
@@ -789,6 +789,7 @@ input {
 .modal-submit-btn:hover,
 .modal-submit-btn:focus {
   background-color: #404bbf;
+  border: #404bbf;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 /* --------------- MODAL STYLES /--------------- */
