--- a/css/styles.css
+++ b/css/styles.css
@@ -628,6 +628,7 @@ input {
   padding: 0px;
   line-height: 0;
   fill: #2e2f42;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
