--- a/css/styles.css
+++ b/css/styles.css
@@ -619,7 +619,6 @@ input {
   position: absolute;
   top: 24px;
   right: 24px;
-  display: inline-block;
   width: 24px;
   height: 24px;
   background-color: #e7e9fc;
@@ -762,7 +761,7 @@ input {
   .modal-own-checkbox {
   background-color: #404bbf;
   fill: #f4f4fd;
-  border: none;
+  border: #404bbf;
 }
 
 .modal-form-checkbox-field + .modal-form-checkbox-label .modal-own-checkbox {
